--- a/build.gradle
+++ b/build.gradle
@@ -132,6 +132,15 @@ dependencies {
     // then special handling is done to allow a setup of a vanilla dependency without the use of an external repository.
     minecraft "net.neoforged:forge:${minecraft_version}-${neo_version}"
 
+
+    // SQL Drivers
+    implementation("org.xerial:sqlite-jdbc:${project.sqlite_version}")
+    implementation("mysql:mysql-connector-java:${project.mysql_version}")
+
+
+    // lombok
+    compileOnly "org.projectlombok:lombok:${project.lombok_version}"
+    annotationProcessor "org.projectlombok:lombok:${project.lombok_version}"
     // Example mod dependency with JEI - using fg.deobf() ensures the dependency is remapped to your development mappings
     // The JEI API is declared for compile time use, while the full JEI artifact is used at runtime
     // compileOnly fg.deobf("mezz.jei:jei-${mc_version}-common-api:${jei_version}")
