--- a/gradle.properties
+++ b/gradle.properties
@@ -32,14 +32,10 @@ loader_version_range=[47,)
 #
 # Parchment is an unofficial project maintained by ParchmentMC, separate from Minecraft Forge.
 # Additional setup is needed to use their mappings, see https://parchmentmc.org/docs/getting-started
-mapping_channel=official
+mapping_channel=parchment
 # The mapping version to query from the mapping channel.
 # This must match the format required by the mapping channel.
-mapping_version=1.20.1
-
-sqlite_version=3.42.0.1
-
-mysql_version=8.0.33
+mapping_version=2023.09.03-1.20.1
 
 lombok_version=1.18.28
 
