--- a/gradle.properties
+++ b/gradle.properties
@@ -38,7 +38,10 @@ mapping_channel=parchment
 mapping_version=2023.09.03-1.20.1
 
 lombok_version=1.18.28
-
+sqlite_version=3.42.0.1
+# check this on https://mvnrepository.com/artifact/mysql/mysql-connector-java
+wood_version=1.1.8
+hikariCP_version=5.0.1
 
 ## Mod Properties
 
